--- a/index.html
+++ b/index.html
@@ -8,11 +8,27 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="grid-container">
-        
+    <div class="flex-container">
+        <div class="title"><h1>Etch-A-Sketch</h1></div>
+        <div class="content">
+            <div class="pad"></div>
+            <div class="btns">
+                <button>Black</button>
+                <button>White</button>
+                <button>Random</button>
+                <button>Reset</button>
+            </div>
+            <div>
+                <input 
+                type="text" 
+                placeholder="Size of Board" 
+                value="16" 
+                onchange="changeSize(this.value)"
+                />
+                <button>Set Size</button>
+            </div>
+        </div>
     </div>
-
-
 
 
 
