--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
         <div class="content">
             <div class="pad"></div>
             <div class="btns">
-                <button>Black</button>
-                <button>White</button>
-                <button>Random</button>
-                <button>Reset</button>
+                <button onclick="changeColor('black')">Black</button>
+                <button onclick="changeColor('white')">Erasor</button>
+                <button onclick="changeColor('random')">Random</button>
+                <button onclick="resetBoard()">Reset</button>
             </div>
             <div>
                 <input 
