added style ready to push

--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
                 value="16" 
                 onchange="changeSize(this.value)"
                 />
-                <button>Set Size</button>
+                <button class="setSize">Set Size</button>
+                
             </div>
         </div>
     </div>
